--- a/Laboratorium_6.ipynb
+++ b/Laboratorium_6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:41f9e8156b1d78c7dd9a620ef5042e06d5a7504ee4ca87e1724912a1ab0431b2"
+  "signature": "sha256:d062f179e928d776be95fc699da95f199e2ed209f2208f0e9a0369510759586e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1648,379 +1648,15 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "3\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "10\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "17\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "24\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "31\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "38\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "45\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "52\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "59\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "66\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "73\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "80\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "87\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "94\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "101\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "108\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "115\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "122\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "129\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "136\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "143\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "150\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "157\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "164\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "171\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "178\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "185\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "192\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "199\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "206\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "213\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "220\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "227\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "234\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "241\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "248\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "255\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "262\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "269\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "276\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "283\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "290\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "297\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "304\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "311\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "318\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "325\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "332\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "339\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "346\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "353\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "360\n"
-       ]
-      },
-      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 116,
        "text": [
         "3"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 116
     },
     {
      "cell_type": "heading",
@@ -2566,21 +2202,22 @@
      "collapsed": false,
      "input": [
       "liczba = 1456323465\n",
-      "liczba.to_s.split('').map(&:to_i).\n"
+      "sum = 0\n",
+      "liczba.to_s.split('').map(&:to_i).each{|x| sum+=x}\n",
+      "puts sum"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 36,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "[1, 4, 5, 6, 3, 2, 3, 4, 6, 5]"
+        "39\n"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 19
     },
     {
      "cell_type": "heading",
@@ -2600,11 +2237,31 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "def suma_cyfr(liczba)\n",
+      "  sum = 0\n",
+      "  liczba.to_s.split('').map(&:to_i).each{|x| sum+=x}\n",
+      "  sum\n",
+      "end\n",
+      "\n",
+      "liczby = (0...100).to_a\n",
+      "\n",
+      "liczby.select{|i| i % 2 == 0 }.reject{|i| i % 4 == 0 }.select{|x| suma_cyfr(x) % 7 == 0}\n",
+      "    "
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 115,
+       "text": [
+        "[34, 70, 86]"
+       ]
+      }
+     ],
+     "prompt_number": 115
     },
     {
      "cell_type": "heading",
@@ -2624,11 +2281,142 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\n",
+      "gracz = [\"Anna\", \"Beata\", \"Andrzej\", \"Wojtek\", \"Jan\", \"Klaudia\"]\n",
+      "przeciwnik = [\"Anna\", \"Beata\", \"Andrzej\", \"Wojtek\", \"Jan\", \"Klaudia\"]\n",
+      "turniej = Array.new\n",
+      "\n",
+      "gracz.each do |g|\n",
+      "przeciwnik.each do |p|\n",
+      "  #turniej.inject{|x| x = g+\" \"+p}\n",
+      "   if p != g \n",
+      "     turniej.push [p,g].sort \n",
+      "   end\n",
+      "end\n",
+      "end\n",
+      "turniej.sort.uniq.each do |g1,g2|\n",
+      "  puts \"#{g1} : #{g2}\"\n",
+      "end"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Andrzej : Anna\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Andrzej : Beata\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Andrzej : Jan\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Andrzej : Klaudia\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Andrzej : Wojtek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Anna : Beata\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Anna : Jan\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Anna : Klaudia\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Anna : Wojtek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Beata : Jan\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Beata : Klaudia\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Beata : Wojtek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Jan : Klaudia\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Jan : Wojtek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Klaudia : Wojtek\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 114,
+       "text": [
+        "[[\"Andrzej\", \"Anna\"], [\"Andrzej\", \"Beata\"], [\"Andrzej\", \"Jan\"], [\"Andrzej\", \"Klaudia\"], [\"Andrzej\", \"Wojtek\"], [\"Anna\", \"Beata\"], [\"Anna\", \"Jan\"], [\"Anna\", \"Klaudia\"], [\"Anna\", \"Wojtek\"], [\"Beata\", \"Jan\"], [\"Beata\", \"Klaudia\"], [\"Beata\", \"Wojtek\"], [\"Jan\", \"Klaudia\"], [\"Jan\", \"Wojtek\"], [\"Klaudia\", \"Wojtek\"]]"
+       ]
+      }
+     ],
+     "prompt_number": 114
     }
    ],
    "metadata": {}
