--- a/Laboratorium_9.ipynb
+++ b/Laboratorium_9.ipynb
@@ -1247,13 +1247,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"ciemne wieki\""
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rok = 1994\n"
+    "rok = 994\n",
+    "case rok\n",
+    "when 1901..2000\n",
+    "  \"XX\"\n",
+    "when 2001..2100\n",
+    "  \"XXI\"\n",
+    "when 2101..2200\n",
+    "  \"XXII\"\n",
+    "else\n",
+    "  \"ciemne wieki\"\n",
+    "end"
    ]
   }
  ],
