--- a/Laboratorium_10.ipynb
+++ b/Laboratorium_10.ipynb
@@ -659,12 +659,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liczba słoni nie może być mniejsza od 0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def liczba_miejsc_w_trabancie\n",
+    "  4\n",
+    "end\n",
+    "# przywracamy poprzednią definicję tej funkcji\n",
+    "def oblicz_liczbe_pelnych_samochodow(liczba_sloni)\n",
+    "  raise ArgumentError.new(\"Liczba słoni nie może być mniejsza od 0\") unless liczba_sloni > 0\n",
+    "  liczba_sloni / liczba_miejsc_w_trabancie \n",
+    "end\n",
+    "\n",
+    "def oblicz_liczbe_niepelnych_samochodow(liczba_sloni)\n",
+    "  raise ArgumentError.new(\"Liczba słoni nie może być mniejsza od 0\") unless liczba_sloni > 0\n",
+    "  if liczba_sloni % liczba_miejsc_w_trabancie == 0\n",
+    "    0\n",
+    "  else\n",
+    "    1\n",
+    "  end\n",
+    "end\n",
+    "\n",
+    "def oblicz_liczbe_wszystkich_samochodow(liczba_sloni)\n",
+    "  oblicz_liczbe_pelnych_samochodow(liczba_sloni) + oblicz_liczbe_niepelnych_samochodow(liczba_sloni)\n",
+    "end\n",
+    "\n",
+    "def ile_potrzeba_samochodow?(liczba_sloni)\n",
+    "  begin\n",
+    "    puts \"Aby przewieźć #{liczba_sloni} słoni potrzeba #{oblicz_liczbe_wszystkich_samochodow(liczba_sloni)} samochodów.\"\n",
+    "  rescue ZeroDivisionError\n",
+    "    puts \"W trabancie nie można umieścić żadnego słownia, bo jest on już zajmowany przez myszy.\"\n",
+    "  rescue NoMethodError\n",
+    "    puts \"Trzeba podać liczbę słoni a nie jakąś dziwną wartość: '#{liczba_sloni}' typu #{liczba_sloni.class}.\"\n",
+    "  end\n",
+    "  rescue ArgumentError => ex\n",
+    "  puts \"#{ex}.\"\n",
+    "end\n",
+    "ile_potrzeba_samochodow?(0)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -689,12 +732,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orson_Scott_Card,1951-08-24,,http://commons.wikimedia.org/wiki/Special:FilePath/Orson_Scott_Card_at_BYU_Symposium_20080216_closeup.jpg?width=300\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plik = File.open(\"data/authors.csv\")\n",
+    "puts plik.readline\n",
+    "plik.close"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -712,12 +768,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orson_Scott_Card,1951-08-24,,http://commons.wikimedia.org/wiki/Special:FilePath/Orson_Scott_Card_at_BYU_Symposium_20080216_closeup.jpg?width=300\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "File.open(\"data/authors.csv\") do |plik|\n",
+    "  puts plik.readline\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -737,12 +806,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orson_Scott_Card,1951-08-24,,http://commons.wikimedia.org/wiki/Special:FilePath/Orson_Scott_Card_at_BYU_Symposium_20080216_closeup.jpg?width=300\n",
+      "\n",
+      "Andrzej_Sapkowski,1948-06-21,,http://commons.wikimedia.org/wiki/Special:FilePath/Sapkowski.jpg?width=300\n",
+      "\n",
+      "Jack_London,1876-01-12,1916-11-22,http://commons.wikimedia.org/wiki/Special:FilePath/JackLondon02.jpeg?width=300\n",
+      "\n",
+      "Henning_Mankell,1948-02-03,,http://commons.wikimedia.org/wiki/Special:FilePath/Henning_Mankell_3_2011_Shankbone.jpg?width=300\n",
+      "\n",
+      "Stanisław_Lem,1921-09-12,2006-03-27,http://commons.wikimedia.org/wiki/Special:FilePath/Stanislaw_Lem_2.jpg?width=300\n",
+      "\n",
+      "Antoni_Gołubiew,1907-02-25,1979-06-27,http://commons.wikimedia.org/wiki/Special:FilePath/Antoni_Golubiew.jpg?width=300\n",
+      "\n",
+      "Mikołaj_Kopernik,1473-02-19,1543-05-24,http://commons.wikimedia.org/wiki/Special:FilePath/Nikolaus_Kopernikus.jpg?width=300\n",
+      "\n",
+      "Maria_Franciszka_Kozłowska,1862-05-27,,http://commons.wikimedia.org/wiki/Special:FilePath/Mateczk_Kozłowska.JPG?width=300\n",
+      "\n",
+      "George_Orwell,1903-06-25,1950-01-21,http://commons.wikimedia.org/wiki/Special:FilePath/GeoreOrwell.jpg?width=300\n",
+      "\n",
+      "William_Szekspir,1564-04-23,1616-05-03,http://commons.wikimedia.org/wiki/Special:FilePath/Shakespeare.jpg?width=300\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "File.open(\"data/authors.csv\") do |plik|\n",
+    "  10.times do \n",
+    "    puts plik.readline\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -760,12 +872,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orson_Scott_Card,1951-08-24,,http://commons.wikimedia.org/wiki/Special:FilePath/Orson_Scott_Card_at_BYU_Symposium_20080216_closeup.jpg?width=300\n",
+      "Andrzej_Sapkowski,1948-06-21,,http://commons.wikimedia.org/wiki/Special:FilePath/Sapkowski.jpg?width=300\n",
+      "Jack_London,1876-01-12,1916-11-22,http://commons.wikimedia.org/wiki/Special:FilePath/JackLondon02.jpeg?width=300\n",
+      "Henning_Mankell,1948-02-03,,http://commons.wikimedia.org/wiki/Special:FilePath/Henning_Mankell_3_2011_Shankbone.jpg?width=300\n",
+      "Stanisław_Lem,1921-09-12,2006-03-27,http://commons.wikimedia.org/wiki/Special:FilePath/Stanislaw_Lem_2.jpg?width=300\n",
+      "Antoni_Gołubiew,1907-02-25,1979-06-27,http://commons.wikimedia.org/wiki/Special:FilePath/Antoni_Golubiew.jpg?width=300\n",
+      "Mikołaj_Kopernik,1473-02-19,1543-05-24,http://commons.wikimedia.org/wiki/Special:FilePath/Nikolaus_Kopernikus.jpg?width=300\n",
+      "Maria_Franciszka_Kozłowska,1862-05-27,,http://commons.wikimedia.org/wiki/Special:FilePath/Mateczk_Kozłowska.JPG?width=300\n",
+      "George_Orwell,1903-06-25,1950-01-21,http://commons.wikimedia.org/wiki/Special:FilePath/GeoreOrwell.jpg?width=300\n",
+      "William_Szekspir,1564-04-23,1616-05-03,http://commons.wikimedia.org/wiki/Special:FilePath/Shakespeare.jpg?width=300\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "File.open(\"data/authors.csv\") do |plik|\n",
+    "  10.times do \n",
+    "    puts plik.readline.chomp\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -783,12 +928,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orson_Scott_Card\n",
+      "Andrzej_Sapkowski\n",
+      "Jack_London\n",
+      "Henning_Mankell\n",
+      "Stanisław_Lem\n",
+      "Antoni_Gołubiew\n",
+      "Mikołaj_Kopernik\n",
+      "Maria_Franciszka_Kozłowska\n",
+      "George_Orwell\n",
+      "William_Szekspir\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "File.open(\"data/authors.csv\") do |plik|\n",
+    "  10.times do \n",
+    "    puts plik.readline.chomp.split(\",\").first\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -807,12 +985,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orson_Scott_Card\n",
+      "Andrzej_Sapkowski\n",
+      "Jack_London\n",
+      "Henning_Mankell\n",
+      "Stanisław_Lem\n",
+      "Antoni_Gołubiew\n",
+      "Mikołaj_Kopernik\n",
+      "Maria_Franciszka_Kozłowska\n",
+      "George_Orwell\n",
+      "William_Szekspir\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "require 'csv'\n",
+    "CSV.open(\"data/authors.csv\") do |plik|\n",
+    "  10.times do \n",
+    "    puts plik.shift.first\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -830,12 +1042,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "Errno::ENOENT",
+     "evalue": "No such file or directory @ rb_sysopen - data/moj_plik.txt",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mErrno::ENOENT\u001b[0m: No such file or directory @ rb_sysopen - data/moj_plik.txt",
+      "\u001b[37m(pry):636:in `initialize'\u001b[0m",
+      "\u001b[37m(pry):636:in `open'\u001b[0m",
+      "\u001b[37m(pry):636:in `<main>'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:355:in `eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:355:in `evaluate_ruby'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:323:in `handle_line'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:243:in `block (2 levels) in eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:242:in `catch'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:242:in `block in eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:241:in `catch'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/pry-0.10.3/lib/pry/pry_instance.rb:241:in `eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/backend.rb:65:in `eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/backend.rb:12:in `eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/kernel.rb:87:in `execute_request'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/kernel.rb:47:in `dispatch'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/kernel.rb:37:in `run'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/command.rb:70:in `run_kernel'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/lib/iruby/command.rb:34:in `run'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/gems/iruby-0.2.7/bin/iruby:5:in `<top (required)>'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/bin/iruby:23:in `load'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/bin/iruby:23:in `<main>'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/bin/ruby_executable_hooks:15:in `eval'\u001b[0m",
+      "\u001b[37m/home/julka/.rvm/gems/ruby-2.2.3/bin/ruby_executable_hooks:15:in `<main>'\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "File.open(\"data/moj_plik.txt\") do |plik|\n",
+    "  1.upto(10) do |indeks|\n",
+    "    plik.puts \"To jest #{indeks} linia\"\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -853,12 +1103,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "File.open(\"data/moj_plik.txt\",\"w\") do |plik|\n",
+    "  1.upto(10) do |indeks|\n",
+    "    plik.puts \"To jest #{indeks} linia\"\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -883,12 +1150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "require 'csv'\n",
+    "CSV.open(\"data/authors.csv\") do |plik|\n",
+    "  File.open(\"data/names.txt\",\"w\") do |plik2|  \n",
+    "    plik.each do\n",
+    "       plik2.puts plik.shift.first.gsub(/_/,\" \")\n",
+    "    end\n",
+    "  end\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -910,12 +1186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "names = Array.new\n",
+    "require 'csv'\n",
+    "CSV.open(\"data/authors.csv\") do |plik|\n",
+    "  plik.each do\n",
+    "    names.push plik.shift.first.gsub(/_/,\" \")\n",
+    "  end\n",
+    "end\n",
+    "sort_names = names.sort\n",
+    "File.open(\"data/sorted_names.txt\",\"w\") do |plik2|  \n",
+    "  plik2.puts sort_names\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
