--- a/Laboratorium_10.ipynb
+++ b/Laboratorium_10.ipynb
@@ -702,9 +702,9 @@
     "    puts \"W trabancie nie można umieścić żadnego słownia, bo jest on już zajmowany przez myszy.\"\n",
     "  rescue NoMethodError\n",
     "    puts \"Trzeba podać liczbę słoni a nie jakąś dziwną wartość: '#{liczba_sloni}' typu #{liczba_sloni.class}.\"\n",
-    "  end\n",
     "  rescue ArgumentError => ex\n",
-    "  puts \"#{ex}.\"\n",
+    "    puts \"#{ex}.\"\n",
+    "  end\n",
     "end\n",
     "ile_potrzeba_samochodow?(0)\n"
    ]
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1159,8 +1159,8 @@
     "require 'csv'\n",
     "CSV.open(\"data/authors.csv\") do |plik|\n",
     "  File.open(\"data/names.txt\",\"w\") do |plik2|  \n",
-    "    plik.each do\n",
-    "       plik2.puts plik.shift.first.gsub(/_/,\" \")\n",
+    "    plik.each do |rekord|\n",
+    "      plik2.puts rekord.first.gsub(/_/,\" \")\n",
     "    end\n",
     "  end\n",
     "end"
