--- a/Laboratorium_9.ipynb
+++ b/Laboratorium_9.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Funkcje oraz instrukcje warunkowe"
+    "#### Funkcje oraz instrukcje warunkowe"
    ]
   },
   {
