--- a/Laboratorium_7.ipynb
+++ b/Laboratorium_7.ipynb
@@ -1078,7 +1078,8 @@
    "source": [
     "authors = Author.where(died: (\"1800-1-1\"..\"1900-12-31\"))\n",
     "authors.each do |author|\n",
-    "  puts \"#{author.id} #{author.name} #{author.surname} #{author.born.strftime(\"%d.%m.%Y\")} #{author.died.strftime(\"%d.%m.%Y\")}\"\n",
+    "  puts \"#{author.id} #{author.name} #{author.surname} #{author.born\n",
+    "} #{author.died.strftime(\"%d.%m.%Y\")}\"\n",
     "end"
    ]
   },
@@ -1293,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -1302,8 +1303,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Juliusz Słowacki 1809-09-04\n",
-      "Adam Mickiewicz 1798-12-24\n"
+      "Juliusz Słowacki 1849-04-03\n",
+      "Adam Mickiewicz 1855-11-26\n"
      ]
     },
     {
@@ -1312,15 +1313,15 @@
        "[#<Author id: 3, name: \"Juliusz\", surname: \"Słowacki\", born: \"1809-09-04\", died: \"1849-04-03\", image_url: nil>, #<Author id: 10, name: \"Adam\", surname: \"Mickiewicz\", born: \"1798-12-24\", died: \"1855-11-26\", image_url: nil>]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "authors = Author.order(:died).limit(2) \n",
+    "authors = Author.order(:died).limit(3) \n",
     "authors.each do |author|\n",
-    "  puts \"#{author.name} #{author.surname} #{author.born}\"\n",
+    "  puts \"#{author.name} #{author.surname} #{author.died}\"\n",
     "end"
    ]
   }
